[gd_scene load_steps=2 format=3 uid="uid://bsdrt0gwjj3f1"]

[ext_resource type="Script" path="res://Resources/Scenes/TimeSelection.gd" id="1_k54x2"]

[node name="TimeSelection" type="HBoxContainer"]
custom_minimum_size = Vector2(216, 31)
offset_right = 216.0
offset_bottom = 31.0
size_flags_horizontal = 4
script = ExtResource("1_k54x2")

[node name="TimeEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "00:00"
alignment = 1
caret_blink = true

[node name="PeriodSelector" type="OptionButton" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "AM"
popup/item_0/id = 0
popup/item_1/text = "PM"
popup/item_1/id = 1

[node name="TypeSelector" type="OptionButton" parent="."]
layout_mode = 2
size_flags_vertical = 4
item_count = 2
selected = 0
popup/item_0/text = "24h"
popup/item_0/id = 0
popup/item_1/text = "12h"
popup/item_1/id = 1

[connection signal="text_submitted" from="TimeEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="item_selected" from="PeriodSelector" to="." method="_on_period_selector_item_selected"]
[connection signal="item_selected" from="TypeSelector" to="." method="_on_type_selector_item_selected"]
